@@ -1,6 +1,8 @@
 			SWI-Prolog ChangeLog
 			====================
 
+  * FIXED: Extranous unlock in format/[2,3].  Diagnosed by Sergey Tikhonov.
+
   * FIXED: Proper handling of pthread error codes.
 
   * FIXED: listing/1 and friends (bug due to moving list predicates).
